Update Hacker News Guided Project MJ.ipynb

--- a/Hacker News Guided Project MJ.ipynb
+++ b/Hacker News Guided Project MJ.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, we will analyze whether more comments are received by 'Ask HN' posts or 'Show HN' posts - essentially are Hacker News visitors more interested in answering questions posed by the community or learning from the community. Furthermore, we will also assess how time of posting of a post is correlated with number of comments the post receives."
+    "Baan Da Paani - jai hoIn this project, we will analyze whether more comments are received by 'Ask HN' posts or 'Show HN' posts - essentially are Hacker News visitors more interested in answering questions posed by the community or learning from the community. Furthermore, we will also assess how time of posting of a post is correlated with number of comments the post receives."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset can be found [here](https://www.kaggle.com/datasets/hacker-news/hacker-news-posts). The dataset comprises 300,000 rows but has been pared down to approximately 20,000 for project purposes. Finally, following is a list and description of the columns - \n",
+    "The aur le beta dataset can be found [here](https://www.kaggle.com/datasets/hacker-news/hacker-news-posts). The dataset comprises 300,000 rows but has been pared down to approximately 20,000 for project purposes. Finally, following is a list and description of the columns - \n",
     "\n",
     "id: the unique identifier from Hacker News for the post\n",
     "\n",
